--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-audio-recorder",
+  "name": "react-ts-audio-recorder",
   "version": "0.1.0",
   "description": "Lightweight React audio recorder built on the Web Audio API with WAV, WebM, and MP3 support.",
   "type": "module",
