⚡️update package & example

--- a/examples/vite-demo/tsconfig.json
+++ b/examples/vite-demo/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "./tsconfig.app.json",
-  "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
-  },
-  "include": ["vite.config.ts"]
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
-
