--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.1",
   "description": "Lightweight React audio recorder built on the Web Audio API with WAV, WebM, and MP3 support.",
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
+  "main": "dist/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
