--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ts-audio-recorder",
-  "version": "0.1.2",
+  "version": "1.0.0",
   "description": "Lightweight React audio recorder built on the Web Audio API with WAV, WebM, and MP3 support.",
   "type": "module",
   "main": "dist/index.js",
@@ -68,5 +68,8 @@
   "engines": {
     "node": ">=18.17.0"
   },
-  "packageManager": "npm@10.9.0"
+  "packageManager": "npm@10.9.0",
+  "dependencies": {
+    "lamejs": "^1.2.1"
+  }
 }
