--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,8 @@
-# Dependencies
-node_modules/
-examples/**/node_modules/
-
-# Builds
-dist/
-dist-*/
-tsconfig.tsbuildinfo
-*.tsbuildinfo
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Editor junk
+node_modules
+dist
+*.log
 .DS_Store
-Thumbs.db
-.idea/
-.vscode/
+example/vite-demo/node_modules
+example/vite-demo/dist
 
-# Coverage / tests
-coverage/
-.nyc_output/
-
-# Env
-.env.local
-.env.*.local
-
-# Example app artifacts
-examples/vite-demo/dist/
 
