--- a/example/vite-demo/package.json
+++ b/example/vite-demo/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ts-audio-recorder": "file:../.."
+    "react-ts-audio-recorder": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.2.7",
