--- a/example/vite-demo/package.json
+++ b/example/vite-demo/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
