--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-ts-audio-recorder",
   "version": "1.1.3",
-  "description": "Framework-agnostic MP3 voice message recorder inspired by Kagami/vmsg.",
+  "description": "Framework-agnostic multi-format audio recorder with MP3 and WAV support. Built on top of Kagami/vmsg for MP3 encoding, with custom PCM→WAV encoder.",
   "keywords": [
     "react",
     "audio",
